syntax = "proto3";
service Tanaka {
  rpc GetNews (GetLatestNewsMessage) returns (LatestNewsResponse) {}
}

message GetLatestNewsMessage {}

message LatestNewsResponse {
  string title = 1;
  string link = 2;
}
